[gd_scene load_steps=13 format=3 uid="uid://d3bhlb6x0ro8f"]

[ext_resource type="Script" path="res://Shaders/Shader Scripts/sphereSDF.gd" id="1_t28a6"]
[ext_resource type="Material" uid="uid://126ih2e781un" path="res://Shaders/Bubble_Arrow_shader.tres" id="2_yohdm"]
[ext_resource type="Shader" path="res://Shaders/SphereField.gdshader" id="3_shc4d"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cofcj"]
resource_local_to_scene = true
bounce = 0.4

[sub_resource type="PrismMesh" id="PrismMesh_66oi3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1qklc"]
size = Vector3(0.505493, 0.504272, 0.464478)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhqut"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_shc4d")
shader_parameter/color = Color(0, 0.513726, 0.329412, 1)
shader_parameter/fresnel_sharpness = 1.0
shader_parameter/impact_points = null
shader_parameter/impact_size = null
shader_parameter/impact_falloff_sharpness = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_wmhj5"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_rhqut")
flip_faces = true
radius = 10.0
height = 20.0

[sub_resource type="SphereMesh" id="SphereMesh_mduu6"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_rhqut")
radius = 10.0
height = 20.0

[sub_resource type="Animation" id="Animation_fyja7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sphereRadius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_njaer"]
resource_name = "expand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sphereRadius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gylt"]
_data = {
"RESET": SubResource("Animation_fyja7"),
"expand": SubResource("Animation_njaer")
}

[node name="Skill1_Scene" type="RigidBody3D"]
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_cofcj")
continuous_cd = true
script = ExtResource("1_t28a6")
noiseSize = 2.0
noiseSpeed = 0.9
noiseStrength = 0.5
borderSize = 0.038
borderColor = Color(0.992157, 0.109804, 0.592157, 1)

[node name="CSGMesh3D" type="CSGMesh3D" parent="." groups=["VisibleObjectsShader"]]
transform = Transform3D(0.702177, 0, 0, 0, -0.764466, 3.24698e-08, 0, -6.68317e-08, -0.371411, 0, 0, 0)
material_override = ExtResource("2_yohdm")
mesh = SubResource("PrismMesh_66oi3")

[node name="CSGBox3D" type="CSGBox3D" parent="." groups=["VisibleObjectsShader"]]
transform = Transform3D(0.349367, 0, 0, 0, -1.62349e-08, -0.764466, 0, 0.371411, -3.34159e-08, 0, 0.760362, 0)
material_override = ExtResource("2_yohdm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00518799, 0.228044, 0.0178833)
shape = SubResource("BoxShape3D_1qklc")

[node name="Bubble_in" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("SphereMesh_wmhj5")

[node name="Bubble_out" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("SphereMesh_mduu6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5gylt")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Area3D" type="Area3D" parent="."]

[node name="Area_col" type="CollisionShape3D" parent="Area3D"]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
